# clamui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE_NOTES.md  install.sh  io.github.linx_systems.ClamUI.metainfo.xml  io.github.linx_systems.ClamUI.service.desktop  pyproject.toml
.github/workflows/: build-appimage.yml  build-deb.yml  build-flatpak.yml  codeql.yml  dependency-audit.yml  dependency-review.yml  deploy-website.yml  i18n.yml  lint.yml  test.yml
appimage/: build-appimage.sh
data/: io.github.linx_systems.ClamUI-virustotal.desktop  io.github.linx_systems.ClamUI.metainfo.xml  io.github.linx_systems.ClamUI.policy  io.github.linx_systems.ClamUI.service.desktop
debian/: build-deb.sh
debian/DEBIAN/: control
docs/: DEVELOPMENT.md  INSTALL.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/architecture/: tray-subprocess.md
docs/user-guide/: troubleshooting.md
flathub/: io.github.linx_systems.ClamUI.local.yml  io.github.linx_systems.ClamUI.yml  python3-build-deps.json  python3-runtime-deps.json  requirements-runtime-pinned.txt  requirements-runtime.txt
flathub/integrations/: clamui-scan-nautilus.sh  io.github.linx_systems.ClamUI-virustotal.desktop  io.github.linx_systems.ClamUI.desktop  io.github.linx_systems.ClamUI.service.desktop
po/: LINGUAS  POTFILES.in  clamui.pot  de.po  en.po  fr.po  it.po  zh_CN.po
scripts/: clamui-scan-nautilus.sh
src/: __init__.py  app.py  app_lifecycle.py  main.py  notification_dispatcher.py  tray_integration.py  view_coordinator.py
src/cli/: __init__.py  apply_preferences.py  help_cmd.py  history_cmd.py  install_helper.py  output.py  profile_cmd.py  quarantine_cmd.py  router.py  scan_cmd.py  scheduled_scan.py  status_cmd.py
src/core/: AGENTS.md  app_context.py  clamav_config.py  daemon_scanner.py  device_monitor.py  file_manager_integration.py  i18n.py  keyring_manager.py  log_manager.py  notification_manager.py  path_validation.py  portmaster_client.py  sanitize.py  scanner.py  scanner_base.py  scanner_types.py  scheduler.py  settings_manager.py  statistics_calculator.py  system_audit.py  updater.py  utils.py  virustotal.py
src/core/quarantine/: AGENTS.md  __init__.py  database.py  file_handler.py  manager.py
src/profiles/: __init__.py  profile_manager.py  profile_storage.py
src/ui/: AGENTS.md  __init__.py  audit_view.py  compat.py  components_view.py  coordinator.py  eicar_helper.py  file_manager_integration_dialog.py  logs_view.py  profile_dialogs.py  quarantine_view.py  scan_view.py  sidebar.py  statistics_view.py  tray_service.py  update_view.py  utils.py  virustotal_setup_dialog.py  window.py
src/ui/preferences/: AGENTS.md  __init__.py  base.py  behavior_page.py  debug_page.py  save_page.py  scanner_page.py  virustotal_page.py  window.py
src/ui/scan/: AGENTS.md  __init__.py  coordinator.py  profile_selector.py  scan_controller.py  scan_progress_widget.py  scan_results_widget.py  scan_view.py  target_selector.py
tests/: conftest.py
tests/cli/: test_apply_preferences.py  test_install_helper.py
tests/core/: test_clamav_config.py  test_clamav_detection.py  test_daemon_scanner.py  test_device_monitor.py  test_file_handler.py  test_file_manager_integration.py  test_flatpak.py  test_log_manager.py  test_logging_config.py  test_notification_manager.py  test_portmaster_client.py  test_quarantine_database.py  test_quarantine_manager.py  test_quarantine_security.py  test_sanitize.py  test_scanner.py  test_scanner_base.py  test_settings_manager.py  test_statistics_calculator.py  test_system_audit.py  test_updater.py  test_utils.py  test_virustotal.py
tests/e2e/: test_scan_flow.py
tests/integration/: test_app.py  test_appstream_metadata.py
tests/packaging/: test_debian_build.py  test_desktop_integration.py  test_flatpak_manifest.py  test_version_consistency.py
tests/ui/: test_audit_notification.py  test_audit_view.py  test_compat.py  test_deferred_loading.py  test_eicar_helper.py  test_file_manager_integration_dialog.py  test_profile_dialogs_compat.py  test_scan_view.py  test_sidebar.py  test_tray_icons.py  test_tray_integration.py  test_tray_manager.py  test_tray_service.py  test_update_view.py  test_window.py
tests/ui/preferences/: test_base.py  test_behavior_page.py  test_debug_page.py  test_device_scan_page.py  test_save_page.py  test_scanner_page.py  test_window.py
tests/ui/scan/: test_coordinator.py  test_profile_selector.py  test_scan_controller.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: InstallTabs.astro
website/src/styles/: global.css
