[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clamui"
version = "0.1.5b"
description = "A modern Linux desktop application that provides a graphical user interface for the ClamAV antivirus command-line tool."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ClamUI Contributors" }
]
keywords = ["clamav", "antivirus", "gtk4", "adwaita", "gui", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "PyGObject>=3.48.0",
    "pycairo>=1.25.0",
    "psutil>=6.0.0",
    "matplotlib>=3.10.0",
    "requests>=2.32.4",
    "urllib3>=2.6.3",
    "certifi>=2024.7.4",
    "keyring>=25.0.0",
    "Pillow>=12.2.0",
    "cairosvg>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.10",
    "pygobject-stubs>=2.16.0",
]

[project.scripts]
clamui = "src.main:main"
clamui-scheduled-scan = "src.cli.scheduled_scan:main"
clamui-apply-preferences = "src.cli.apply_preferences:main"

[project.urls]
Homepage = "https://github.com/linx-systems/clamui"
Repository = "https://github.com/linx-systems/clamui"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "INT",    # flake8-gettext (catches f-strings in gettext calls)
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print (enforce logger over print)
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-native rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (necessary for gi.require_version calls)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator instead of if-else block
    "SIM105", # use contextlib.suppress (stylistic preference)
    "SIM102", # use single if with and (stylistic preference)
    "SIM117", # use single with statement (readability preference for nested contexts)
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument (common for test fixtures)
    "ARG005", # unused lambda argument (common in GTK signal handlers)
    "S603",   # subprocess with shell=False (core to ClamAV CLI wrapping)
    "S607",   # partial path for process (ClamAV binaries found via PATH)
    "S606",   # process without shell (same rationale as S603)
    "S311",   # random not for crypto (used for log sampling)
    "S103",   # file permissions — intentional security hardening (0o600)
    "S108",   # hardcoded /tmp paths — used legitimately for temp operations
    "S110",   # try-except-pass — used in cleanup/fallback code
    "S112",   # try-except-continue — same rationale
    "S314",   # XML ElementTree — only parses trusted local config/coverage files
    "S608",   # SQL-like string — false positives on log messages
    "PT009",  # unittest-style asserts (existing class-based test convention)
    "PT027",  # unittest assertRaises (same reason)
    "RUF005", # collection literal concatenation (stylistic preference)
    "RUF012", # mutable class default (common in GTK widget classes)
    "RUF013", # implicit Optional (existing convention)
    "RUF059", # unused unpacked variable (common ok/error unpacking pattern)
]

[tool.ruff.lint.per-file-ignores]
"src/cli/*.py" = ["T201"]              # CLI output is print-based
"src/ui/tray_service.py" = ["T201"]    # IPC protocol over stdout
"src/main.py" = ["T201"]              # Startup diagnostic
"src/core/logging_config.py" = ["T201"] # Fallback when logger itself fails
"src/core/log_manager.py" = ["T201"]   # Export error handling
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "PT006", "PT008", "PT011", "PT018", "PT021", "PT022"]  # assert + test credentials + pytest style

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may require external dependencies)",
    "ui: marks tests as UI tests (require GTK/display environment)",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "error::FutureWarning",
    "error::ResourceWarning",
    # Ignore third-party deprecations we can't control
    "ignore::DeprecationWarning:gi.*",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__pycache__/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.10",
    "pygobject-stubs>=2.16.0",
]

# System dependencies note:
# ClamUI requires system packages for GTK4/PyGObject bindings:
#
# Ubuntu/Debian:
#   sudo apt install libgirepository-2.0-dev libcairo2-dev pkg-config python3-dev
#   (On Ubuntu < 24.04: use libgirepository1.0-dev instead)
#
# Runtime libraries:
#   sudo apt install gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev
#
# Fedora:
#   sudo dnf install python3-gobject-devel gtk4 libadwaita gobject-introspection-devel cairo-gobject-devel
#
# Arch:
#   sudo pacman -S python-gobject gtk4 libadwaita
